--- a/css/css.css
+++ b/css/css.css
@@ -70,7 +70,7 @@ a:hover
 {
 	display:inline-block;
 	width:78%;
-	height:530px;
+	height:520px;
 	padding:4px;
 	border:solid 1px #000000;
 	overflow:auto;
@@ -84,7 +84,7 @@ a:hover
 #bottom
 {
 	text-align:right;
-	padding:24px;
+	/* padding:3px; */
 }
 a.button
 {
